# segment-anything-onnx

./: .gitignore  LICENSE  README.md  demo.py  demo.sh  pyproject.toml  setup.py.old
examples/: laura_prompt.json
segment_anything_onnx/: cli.py  inference.py  sam_onnx.py
