[tool.black]
line-length = 79
#include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "segment_anything_onnx" ]

[project]
name = "segment_anything_onnx"
version = "0.0.3"
authors = [
    { name="Mike Prince", email="mike@mikeprince.com" },
]
description = "Run Segment Anything with ONNX models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "numpy",
    "onnxruntime"
]

[project.urls]
Homepage = "https://github.com/whatstyle-ai/segment-anything-onnx"
Issues = "https://github.com/whatstyle-ai/segment-anything-onnx/issues"